<resources>
    <string name="app_name">iShopping</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register_c">REGISTER</string>
    <string name="home_c">HOME</string>
    <string name="products_c">PRODUCTS</string>
    <string name="wish_list_c">WISH LIST</string>
    <string name="contact_c">CONTACT</string>
    <string name="contact">Contact</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="product">Product</string>
    <string name="add_to_wish_list">Add to wish list</string>
    <string name="buy">Buy</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="message">Message</string>
    <string name="way_of_paying">Way of Paying</string>
    <string name="already_in_wish_list">Product is already in your wish list.</string>
    <string name="added_successfully">Added successfully.</string>
    <string name="removed_successfully">Removed form your wish list.</string>
    <string name="undo">Undo</string>
    <string name="required">Required</string>
    <string name="buy_request_sent_successfully">Buy request sent successfully</string>
    <string name="successful_request">Successful Request</string>
    <string name="message_sent_successfully">Your message sent successfully</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="products">Products</string>
    <string name="all_products">All Products</string>
    <string name="your_favorite_products">YOUR FAVORITE PRODUCTS</string>
    <string name="wish_list">Wish List</string>
    <string name="get_in_touch">GET IN TOUCH</string>
    <string name="our_location">Our Location</string>
    <string name="contact_address">Address: Lorem Ipsum 50000 / Hello Street / Egypt\nEmail: email@yourdomaine.com\nMobile: +000 123 456 78</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="connection_error">Connection error</string>
    <string name="connection_error_c">Connection Error</string>
    <string name="close">Close</string>
    <string name="no_data">No data</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="tap_to_refresh">Tap to refresh</string>
    <string name="no_products_here">No products here</string>
    <string name="no_products_in">No products in</string>
    <string name="no_favorites_in_your_wish_list">No favorites in your wish list</string>
    <string name="please_wait">Please wait...</string>
    <string name="loading">Loading</string>
</resources>
