<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_spacing">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_in_touch"
            android:textColor="@color/brown_text_color"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_spacing"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/form_margin"
                android:padding="@dimen/cardView_spacing"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="@dimen/cardView_corner_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/form_spacing">

                    <EditText
                        android:id="@+id/text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="@color/light_gray_text_color"
                        android:textSize="@dimen/form_text_size" />

                    <EditText
                        android:id="@+id/text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/form_text_field_margin"
                        android:hint="@string/email_address"
                        android:maxLines="1"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:textColor="@color/light_gray_text_color"
                        android:textSize="@dimen/form_text_size" />

                    <EditText
                        android:id="@+id/text_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/form_text_field_margin"
                        android:gravity="top"
                        android:hint="@string/message"
                        android:minHeight="@dimen/form_large_text_field_min_height"
                        android:textColor="@color/light_gray_text_color"
                        android:textSize="@dimen/form_text_size" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/button_send"
                style="@style/FormButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/submit_button_margin"
                android:layout_marginLeft="@dimen/submit_button_margin"
                android:layout_marginRight="@dimen/submit_button_margin"
                android:text="@string/send" />
        </LinearLayout>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin"
            android:layout_marginTop="@dimen/screen_spacing"
            android:padding="@dimen/cardView_spacing"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="@dimen/cardView_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/form_spacing">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/map_panel_spacing"
                    android:text="@string/our_location"
                    android:textColor="@color/brown_text_color"
                    android:textSize="@dimen/title_text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/seperator_bg" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/map_panel_spacing"
                    android:scaleType="centerCrop"
                    android:src="@drawable/map" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/seperator_bg" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/map_panel_spacing"
                    android:text="@string/contact_address"
                    android:textColor="@color/light_gray_text_color"
                    android:textSize="@dimen/contact_address_text_size" />

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
