<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/screen_spacing">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_margin"
            android:padding="@dimen/cardView_spacing"
            card_view:cardBackgroundColor="@android:color/white"
            card_view:cardCornerRadius="@dimen/cardView_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/form_spacing">

                <EditText
                    android:id="@+id/text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/light_gray_text_color"
                    android:textSize="@dimen/form_text_size" />

                <EditText
                    android:id="@+id/text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_text_field_margin"
                    android:hint="@string/email_address"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/light_gray_text_color"
                    android:textSize="@dimen/form_text_size" />

                <EditText
                    android:id="@+id/text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_text_field_margin"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/light_gray_text_color"
                    android:textSize="@dimen/form_text_size" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/button_register"
            style="@style/FormButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/submit_button_margin"
            android:layout_marginLeft="@dimen/submit_button_margin"
            android:layout_marginRight="@dimen/submit_button_margin"
            android:text="@string/register" />
    </LinearLayout>

</FrameLayout>