<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/actionbar"
        layout="@layout/actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height" />

    <com.nirhart.parallaxscroll.views.ParallaxScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbar"
        app:parallax_factor="1.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/product_image_height">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_image" />

                <ImageView
                    android:id="@+id/image_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="@dimen/screen_spacing">

                <TextView
                    android:id="@+id/text_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/categories_item_spacing"
                    android:text="Category"
                    android:textColor="@color/light_gray_text_color"
                    android:textSize="@dimen/desc_text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/product_price_panel_height"
                    android:layout_marginLeft="@dimen/categories_item_spacing"
                    android:layout_marginTop="@dimen/screen_spacing"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="@dimen/product_price_panel_marker_width"
                        android:layout_height="match_parent"
                        android:background="@color/primary" />

                    <TextView
                        android:id="@+id/text_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/product_price_panel_text_margin"
                        android:text="20"
                        android:textColor="@color/brown_text_color"
                        android:textSize="@dimen/title_text_size"
                        android:textStyle="bold" />

                </LinearLayout>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/cardView_spacing"
                    android:layout_marginLeft="@dimen/cardView_spacing"
                    android:layout_marginRight="@dimen/cardView_spacing"
                    android:layout_marginTop="@dimen/screen_spacing"
                    android:padding="@dimen/cardView_spacing"
                    card_view:cardCornerRadius="@dimen/cardView_corner_radius">

                    <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/view_addToWishList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/cardView_spacing"
                        app:mrl_rippleDelayClick="false"
                        app:mrl_rippleHover="true"
                        app:mrl_rippleOverlay="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/image_heart"
                                android:layout_width="@dimen/product_action_icon_dimen"
                                android:layout_height="@dimen/product_action_icon_dimen"
                                android:layout_margin="@dimen/product_action_icon_margin"
                                android:src="@drawable/gray_heart_icon" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_to_wish_list"
                                android:textColor="@color/dark_gray_text_color"
                                android:textSize="@dimen/product_action_text_size" />

                        </LinearLayout>

                    </com.balysv.materialripple.MaterialRippleLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/cardView_spacing"
                    android:layout_marginLeft="@dimen/cardView_spacing"
                    android:layout_marginRight="@dimen/cardView_spacing"
                    android:layout_marginTop="@dimen/screen_spacing"
                    android:padding="@dimen/cardView_spacing"
                    card_view:cardCornerRadius="@dimen/cardView_corner_radius">

                    <com.balysv.materialripple.MaterialRippleLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/view_buy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:mrl_rippleDelayClick="false"
                        app:mrl_rippleHover="true"
                        app:mrl_rippleOverlay="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:animateLayoutChanges="true"
                            android:orientation="vertical"
                            android:padding="@dimen/cardView_spacing">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="@dimen/product_action_icon_dimen"
                                    android:layout_height="@dimen/product_action_icon_dimen"
                                    android:layout_margin="@dimen/product_action_icon_margin"
                                    android:src="@drawable/dollar_icon" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/buy"
                                    android:textColor="@color/dark_gray_text_color"
                                    android:textSize="@dimen/product_action_text_size" />

                                <ImageView
                                    android:id="@+id/image_arrow"
                                    android:layout_width="@dimen/product_buy_form_arrow_dimen"
                                    android:layout_height="@dimen/product_buy_form_arrow_dimen"
                                    android:layout_margin="@dimen/form_spacing"
                                    android:src="@drawable/right_arrow" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/view_buyContent"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:visibility="gone">

                                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/form_margin"
                                    android:padding="@dimen/cardView_spacing"
                                    card_view:cardBackgroundColor="@android:color/white"
                                    card_view:cardCornerRadius="@dimen/cardView_corner_radius">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="vertical"
                                        android:padding="@dimen/form_spacing">

                                        <EditText
                                            android:id="@+id/text_name"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:hint="@string/name"
                                            android:maxLines="1"
                                            android:scrollHorizontally="true"
                                            android:singleLine="true"
                                            android:textColor="@color/light_gray_text_color"
                                            android:textSize="@dimen/form_text_size" />

                                        <EditText
                                            android:id="@+id/text_phone"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="@dimen/form_text_field_margin"
                                            android:hint="@string/phone_number"
                                            android:inputType="phone"
                                            android:maxLines="1"
                                            android:scrollHorizontally="true"
                                            android:singleLine="true"
                                            android:textColor="@color/light_gray_text_color"
                                            android:textSize="@dimen/form_text_size" />

                                        <EditText
                                            android:id="@+id/text_email"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="@dimen/form_text_field_margin"
                                            android:hint="@string/email_address"
                                            android:inputType="textEmailAddress"
                                            android:maxLines="1"
                                            android:scrollHorizontally="true"
                                            android:singleLine="true"
                                            android:textColor="@color/light_gray_text_color"
                                            android:textSize="@dimen/form_text_size" />

                                        <EditText
                                            android:id="@+id/text_address"
                                            android:layout_width="match_parent"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="@dimen/form_text_field_margin"
                                            android:hint="@string/address"
                                            android:minHeight="@dimen/form_large_text_field_min_height"
                                            android:textColor="@color/light_gray_text_color"
                                            android:textSize="@dimen/form_text_size" />

                                    </LinearLayout>

                                </android.support.v7.widget.CardView>

                                <Button
                                    android:id="@+id/button_send"
                                    style="@style/FormButton"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginBottom="@dimen/submit_button_margin"
                                    android:layout_marginLeft="@dimen/submit_button_margin"
                                    android:layout_marginRight="@dimen/submit_button_margin"
                                    android:text="@string/send" />
                            </LinearLayout>
                        </LinearLayout>
                    </com.balysv.materialripple.MaterialRippleLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </com.nirhart.parallaxscroll.views.ParallaxScrollView>
</RelativeLayout>